[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/kenney_platformercharacters/PNG/Player/player_tilesheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/PlayerT5.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/step.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/jump.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.5, 47.5 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 110 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 110, 80, 110 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 110, 80, 110 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 110 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 110 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 110 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "berdiri",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "jalan",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "jatuh",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "jongkok",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "lompat",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 7.5 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "berdiri"

[node name="FootstepEffect" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -2, -48 )
stream = ExtResource( 3 )
volume_db = 7.0

[node name="FootstepTimer" type="Timer" parent="FootstepEffect"]
wait_time = 0.4

[node name="JumpEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0

[connection signal="timeout" from="FootstepEffect/FootstepTimer" to="." method="_on_FootstepTimer_timeout"]
